Fix <pre> wrap/overflow.

--- a/style.css
+++ b/style.css
@@ -67,6 +67,10 @@ ul {
 	list-style-type: disc;
 }
 
+pre {
+	white-space: pre-wrap;
+}
+
 /* Blocks
 ---------------------------------------------------------------------------- */
 
